# simple-search-engine

./: .env.example  .gitignore  LICENSE  Makefile  README.md  app.py  elastic_db_rag.ipynb  elastic_db_rag.py  exploring-vectors-embeddings.ipynb  faq-rag-search-engine.ipynb  ground_truth.ipynb  project_structure  pyproject.toml  requirements.txt
.cursor/rules/: code_standards.mdc  python-logging.mdc  python.mdc
data/evaluation_results/: evaluation_results_20250302_214947.csv  evaluation_results_20250302_214947.json
data/output/: ground-truth-data.csv
docs/: index.md  mkdocs.yml
docs/guides/: installation.md
notebooks/: elastic_db_rag.ipynb  exploring-vectors-embeddings.ipynb  qa-bot.ipynb
src/: __init__.py  config.py
src/core/: config.py
src/core/utils/: __init__.py  logger.py
src/elastic/: __init__.py  client.py  indexer.py  queries.py
src/models/: embedding.py
src/rag/: __init__.py  evaluate.py  generate_ground_truth.py  qa_bot.py  templates.py
src/utils/: logger.py  text_cleaner.py
src/web/: __init__.py  app.py
tests/: test_text_cleaner.py
