[project]
name = "simple-search-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "elasticsearch>=8.17.1",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "openai>=1.61.1",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "streamlit>=1.42.0",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers>=4.48.3",
]
