[project]
name = "simple-search-engine"
version = "0.1.0"
description = "A search engine implementation using Elasticsearch and RAG techniques"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "cursor-rules>=0.5.1",
    "elasticsearch>=8.17.1",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "openai>=1.61.1",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "ruff>=0.9.6",
    "scikit-learn>=1.6.1",
    "sentence-transformers==2.7.0",
    "streamlit>=1.42.0",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers>=4.48.3",
]

[project.optional-dependencies]
dev = [
    "black>=24.2.0",
    "ipython>=8.12.0",
    "jupyter>=1.0.0",
]

docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

lint.select = ["ALL"]
lint.ignore = [
    "D100", "D101", "D102",
    "D103", "D104", "D105",
    "D107", "D205", "D213", 
    "D400", "COM812", "D211",
    "D203", "ANN201", "ANN202",
    "ANN204",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
